--- a/src/pages/Root/Root.css
+++ b/src/pages/Root/Root.css
@@ -1,7 +1,8 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap');body {
   background-color: #282c34;
   min-height: 100vh;
   color: white;
+  font-family: "Montserrat", sans-serif;
 }
 
 .appWrapper {
