--- a/src/pages/Repairs/AddRepair/AddRepair.scss
+++ b/src/pages/Repairs/AddRepair/AddRepair.scss
@@ -4,7 +4,9 @@
   flex-direction: column;
   background-color: #282c34;
   width: 90vw;
-  height: 1000px;
+  height: 700px;
+  max-width: 1200px;
+
 }
 
 .sectionWrapper {
@@ -15,4 +17,6 @@
   border: 1px solid gray;
   border-radius: 10px;
   margin: 10px;
+  max-width: 535px;
+
 }
